[package]
name = "solana-opts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
thiserror = "1.0"
solana-program = "1.8.12"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]